// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Contract: Public API Surface > Export Categories > should have categorized exports snapshot 1`] = `
{
  "classes": [
    "HITLGate",
    "PassExecutor",
    "PassRegistry",
    "RateLimiter",
  ],
  "constants": [
    "COMPILER_VERSION",
  ],
  "functions": [
    "RetryableError",
    "actionVerbRequiredIssue",
    "addAliasHandler",
    "addAliasOp",
    "addAliasSuggestion",
    "addAliasSuggestions",
    "addDepOp",
    "addEvidence",
    "addFragmentOp",
    "addUserAlias",
    "aliasConflict",
    "aliasNotFound",
    "aliasWrongState",
    "all",
    "analyzeEffectDeps",
    "analyzeExpressionDeps",
    "analyzeForAliases",
    "analyzeFragmentDeps",
    "applyAddDep",
    "applyAddFragment",
    "applyAlias",
    "applyAliasHandler",
    "applyAliasOp",
    "applyChooseConflict",
    "applyCodebookAliases",
    "applyPatch",
    "applyPatchOp",
    "applyPatches",
    "applyRemoveDep",
    "applyRemoveFragment",
    "applyRenamePath",
    "applyReplaceEvidence",
    "applyReplaceExpr",
    "applyUpdateFragmentMeta",
    "applyUpdateSchemaField",
    "buildActions",
    "buildDataSchema",
    "buildDependencyGraph",
    "buildDependencyGraphFromDomain",
    "buildDependencyGraphFromFragments",
    "buildDerived",
    "buildDomainDraft",
    "buildFragmentDependencyGraph",
    "buildMessages",
    "buildProvenanceMap",
    "buildSemanticPath",
    "buildSources",
    "buildStateSchema",
    "buildSystemPrompt",
    "buildUserPrompt",
    "buildZodSchemaFromRecord",
    "canMerge",
    "canMergeInto",
    "checkFragmentsForHITL",
    "chooseConflictOp",
    "classifySeverity",
    "clearPendingAliases",
    "clearRejectedAliases",
    "cloneFragment",
    "clusterByExpression",
    "clusterSimilarPaths",
    "codeOrigin",
    "codebookMismatch",
    "codebookRequired",
    "combinedPathSimilarity",
    "compareRiskLevels",
    "compileFragmentsFromArtifacts",
    "conflictNotFound",
    "consolidateSchemaFragments",
    "convertDomainDraftToManifesto",
    "convertFromLinkResult",
    "createActionFragment",
    "createActionVerbRequiredIssue",
    "createAliasEntry",
    "createAliasId",
    "createAliasSuggestion",
    "createAnthropicAdapter",
    "createArtifactId",
    "createCodebook",
    "createCodebookId",
    "createCompiler",
    "createCompilerSession",
    "createConflictId",
    "createCyclicDependencyIssue",
    "createDerivedFragment",
    "createDuplicateProvidesIssue",
    "createEffectFragment",
    "createEffectRiskTooHighIssue",
    "createEvidence",
    "createExpressionFragment",
    "createFindingId",
    "createHITLGate",
    "createInitialSnapshot",
    "createInvalidEffectIssue",
    "createInvalidExpressionIssue",
    "createInvalidPathIssue",
    "createInvalidPreconditionPathIssue",
    "createIssueFromCode",
    "createIssueId",
    "createLogEntry",
    "createMissingDependencyIssue",
    "createMissingProvenanceIssue",
    "createOpenAIAdapter",
    "createPassContext",
    "createPassExecutor",
    "createPassRegistry",
    "createPatch",
    "createPatchHint",
    "createPatchId",
    "createPolicyFragment",
    "createProvenance",
    "createSchemaFragment",
    "createSourceFragment",
    "createStatementFragment",
    "createUnknownSchemaTypeIssue",
    "cycleDetected",
    "cyclicDependencyIssue",
    "depAlreadyExists",
    "depNotFound",
    "detectConflicts",
    "detectCycles",
    "detectCyclesFromFragments",
    "detectCyclesInGraph",
    "detectDuplicateActionIds",
    "detectDuplicatePathProvides",
    "detectDuplicatePaths",
    "detectSchemaMismatches",
    "detectSemanticMismatches",
    "duplicateProvides",
    "duplicateProvidesConflict",
    "effectRiskTooHighIssue",
    "err",
    "errorToString",
    "expressionSimilarity",
    "extractActionId",
    "extractAllPaths",
    "extractKindFromFragmentId",
    "fieldNotFound",
    "filterConflictsByType",
    "filterIssuesBySeverity",
    "findFrequentPaths",
    "findSimilarExpressions",
    "findSimilarPaths",
    "flatMap",
    "fragmentAlreadyExists",
    "fragmentIdMatchesKind",
    "fragmentNotFound",
    "fragmentTypeToZod",
    "fragmentTypeToZodWithConstraints",
    "generateAliasHints",
    "generateAllowlistIssues",
    "generateHITLIssues",
    "generateLinkResultVersion",
    "generateOriginHash",
    "generateRandomFragmentId",
    "generateStableFragmentId",
    "generateSuggestionsFromDuplicates",
    "generatedOrigin",
    "getAliasById",
    "getAliasConflicts",
    "getAliasForPath",
    "getAliasesByStatus",
    "getAliasesForCanonical",
    "getAllCanonicalPaths",
    "getAllPaths",
    "getAllProvidedActions",
    "getAllProvidedPaths",
    "getAnalysisSummary",
    "getAppliedAliases",
    "getBlockingConflicts",
    "getBlockingIssues",
    "getCodebookStats",
    "getConflictForTarget",
    "getDependencyFragments",
    "getDependentFragments",
    "getDuplicatePathSuggestions",
    "getErrorIssues",
    "getErrorMessage",
    "getInitialCompilerData",
    "getInitialCompilerState",
    "getIssueSummary",
    "getLinkResultSummary",
    "getMergeSummary",
    "getNonBlockingConflicts",
    "getPathLocalName",
    "getPathNamespace",
    "getPathProvider",
    "getPendingAliases",
    "getProvidersForPath",
    "getRejectedAliases",
    "getRootFragments",
    "getVerifyBlockingIssues",
    "getVerifyResultSummary",
    "getWarningIssues",
    "groupFragmentsByKind",
    "groupFragmentsByProvides",
    "groupIssuesByCode",
    "hasActionConflict",
    "hasAliasForPath",
    "hasAllDependencies",
    "hasAllowlistViolations",
    "hasBlockingIssues",
    "hasCycles",
    "hasNoDependencies",
    "hasPathConflict",
    "hasVerifyBlockingIssues",
    "hashPrompt",
    "incrementalLink",
    "incrementalMerge",
    "internalError",
    "invalidFragmentKind",
    "invalidOperation",
    "invalidPath",
    "invalidPathIssue",
    "invalidPreconditionPathIssue",
    "isActionFragment",
    "isActionId",
    "isAsyncPath",
    "isBlockingConflict",
    "isBlockingIssue",
    "isCodeArtifact",
    "isCompilerError",
    "isDataPath",
    "isDerivedFragment",
    "isDerivedPath",
    "isDraftConvertible",
    "isEffectFragment",
    "isErr",
    "isExpressionFragment",
    "isFragmentDraft",
    "isLinkResultValid",
    "isManifestoArtifact",
    "isNLPass",
    "isNextStepAddFragment",
    "isNextStepApplyPatch",
    "isNextStepConfirmDomain",
    "isNextStepFixIssue",
    "isNextStepRecompile",
    "isNextStepResolveConflict",
    "isNextStepReviewDraft",
    "isOk",
    "isPolicyFragment",
    "isRiskAtLeast",
    "isSchemaFragment",
    "isSemanticPath",
    "isSourceFragment",
    "isStatePath",
    "isStatementFragment",
    "isTextArtifact",
    "jaccardSimilarity",
    "levenshteinDistance",
    "link",
    "linkExtended",
    "llmOrigin",
    "map",
    "mapCoreValidationIssue",
    "mapCoreValidationIssues",
    "mapErr",
    "mapValidationError",
    "mapValidationErrors",
    "mergeFragments",
    "mergeSchemaFields",
    "missingDependency",
    "missingDependencyIssue",
    "missingProvenanceIssue",
    "normalizeAllFragments",
    "normalizeFragmentProvides",
    "normalizeFragmentRequires",
    "normalizePath",
    "ok",
    "parseJSON",
    "parseJSONArray",
    "patchOrigin",
    "pathNameSimilarity",
    "pathNotFound",
    "pathTokenSimilarity",
    "previewPatch",
    "quickVerifyIsValid",
    "regenerateFragmentIdIfNeeded",
    "rejectAlias",
    "rejectAliasHandler",
    "rejectAliasOp",
    "removeAlias",
    "removeAliasHandler",
    "removeAliasOp",
    "removeFragment",
    "removeFragmentOp",
    "renamePathOp",
    "replaceExprOp",
    "resolveAllToCanonical",
    "resolveToCanonical",
    "runCompilePipeline",
    "sameNamespace",
    "schemaMismatchConflict",
    "schemaNotFound",
    "selfReference",
    "semanticMismatchConflict",
    "setConfidence",
    "sortAliasesByConfidence",
    "sortCodebookEntries",
    "sortConflicts",
    "sortFragmentsByStableId",
    "sortIssues",
    "stringSimilarity",
    "suggestAliasesForPath",
    "suggestCanonicalFor",
    "suggestConflictResolutions",
    "suggestDuplicateActionResolutions",
    "suggestDuplicatePathResolutions",
    "suggestSchemaMismatchResolutions",
    "textOrigin",
    "tokenize",
    "topologicalSort",
    "topologicalSortFragments",
    "traverseEffectAST",
    "unknownOperation",
    "updateFragmentRequires",
    "validateActions",
    "validateAllowlist",
    "validateCodebook",
    "validateDag",
    "validateDagFromFragments",
    "validateDependencyExists",
    "validateDomainDag",
    "validateDomainDraft",
    "validateEffects",
    "validateFragmentsStatic",
    "validateGraphDependencies",
    "validateMergeResult",
    "validatePaths",
    "validatePolicies",
    "validateProvenance",
    "validateStatic",
    "validateTypes",
    "verify",
    "verifyFragments",
    "verifyFull",
    "withRetry",
    "wouldAliasConflict",
  ],
  "objects": [
    "DEFAULT_ALIAS_HINT_CONFIG",
    "VALID_PATH_PREFIXES",
    "compilerDomain",
  ],
  "other": [],
}
`;

exports[`Contract: Public API Surface > Export List Snapshot > should have expected number of exports 1`] = `347`;

exports[`Contract: Public API Surface > Export List Snapshot > should have stable export list 1`] = `
[
  "COMPILER_VERSION",
  "DEFAULT_ALIAS_HINT_CONFIG",
  "HITLGate",
  "PassExecutor",
  "PassRegistry",
  "RateLimiter",
  "RetryableError",
  "VALID_PATH_PREFIXES",
  "actionVerbRequiredIssue",
  "addAliasHandler",
  "addAliasOp",
  "addAliasSuggestion",
  "addAliasSuggestions",
  "addDepOp",
  "addEvidence",
  "addFragmentOp",
  "addUserAlias",
  "aliasConflict",
  "aliasNotFound",
  "aliasWrongState",
  "all",
  "analyzeEffectDeps",
  "analyzeExpressionDeps",
  "analyzeForAliases",
  "analyzeFragmentDeps",
  "applyAddDep",
  "applyAddFragment",
  "applyAlias",
  "applyAliasHandler",
  "applyAliasOp",
  "applyChooseConflict",
  "applyCodebookAliases",
  "applyPatch",
  "applyPatchOp",
  "applyPatches",
  "applyRemoveDep",
  "applyRemoveFragment",
  "applyRenamePath",
  "applyReplaceEvidence",
  "applyReplaceExpr",
  "applyUpdateFragmentMeta",
  "applyUpdateSchemaField",
  "buildActions",
  "buildDataSchema",
  "buildDependencyGraph",
  "buildDependencyGraphFromDomain",
  "buildDependencyGraphFromFragments",
  "buildDerived",
  "buildDomainDraft",
  "buildFragmentDependencyGraph",
  "buildMessages",
  "buildProvenanceMap",
  "buildSemanticPath",
  "buildSources",
  "buildStateSchema",
  "buildSystemPrompt",
  "buildUserPrompt",
  "buildZodSchemaFromRecord",
  "canMerge",
  "canMergeInto",
  "checkFragmentsForHITL",
  "chooseConflictOp",
  "classifySeverity",
  "clearPendingAliases",
  "clearRejectedAliases",
  "cloneFragment",
  "clusterByExpression",
  "clusterSimilarPaths",
  "codeOrigin",
  "codebookMismatch",
  "codebookRequired",
  "combinedPathSimilarity",
  "compareRiskLevels",
  "compileFragmentsFromArtifacts",
  "compilerDomain",
  "conflictNotFound",
  "consolidateSchemaFragments",
  "convertDomainDraftToManifesto",
  "convertFromLinkResult",
  "createActionFragment",
  "createActionVerbRequiredIssue",
  "createAliasEntry",
  "createAliasId",
  "createAliasSuggestion",
  "createAnthropicAdapter",
  "createArtifactId",
  "createCodebook",
  "createCodebookId",
  "createCompiler",
  "createCompilerSession",
  "createConflictId",
  "createCyclicDependencyIssue",
  "createDerivedFragment",
  "createDuplicateProvidesIssue",
  "createEffectFragment",
  "createEffectRiskTooHighIssue",
  "createEvidence",
  "createExpressionFragment",
  "createFindingId",
  "createHITLGate",
  "createInitialSnapshot",
  "createInvalidEffectIssue",
  "createInvalidExpressionIssue",
  "createInvalidPathIssue",
  "createInvalidPreconditionPathIssue",
  "createIssueFromCode",
  "createIssueId",
  "createLogEntry",
  "createMissingDependencyIssue",
  "createMissingProvenanceIssue",
  "createOpenAIAdapter",
  "createPassContext",
  "createPassExecutor",
  "createPassRegistry",
  "createPatch",
  "createPatchHint",
  "createPatchId",
  "createPolicyFragment",
  "createProvenance",
  "createSchemaFragment",
  "createSourceFragment",
  "createStatementFragment",
  "createUnknownSchemaTypeIssue",
  "cycleDetected",
  "cyclicDependencyIssue",
  "depAlreadyExists",
  "depNotFound",
  "detectConflicts",
  "detectCycles",
  "detectCyclesFromFragments",
  "detectCyclesInGraph",
  "detectDuplicateActionIds",
  "detectDuplicatePathProvides",
  "detectDuplicatePaths",
  "detectSchemaMismatches",
  "detectSemanticMismatches",
  "duplicateProvides",
  "duplicateProvidesConflict",
  "effectRiskTooHighIssue",
  "err",
  "errorToString",
  "expressionSimilarity",
  "extractActionId",
  "extractAllPaths",
  "extractKindFromFragmentId",
  "fieldNotFound",
  "filterConflictsByType",
  "filterIssuesBySeverity",
  "findFrequentPaths",
  "findSimilarExpressions",
  "findSimilarPaths",
  "flatMap",
  "fragmentAlreadyExists",
  "fragmentIdMatchesKind",
  "fragmentNotFound",
  "fragmentTypeToZod",
  "fragmentTypeToZodWithConstraints",
  "generateAliasHints",
  "generateAllowlistIssues",
  "generateHITLIssues",
  "generateLinkResultVersion",
  "generateOriginHash",
  "generateRandomFragmentId",
  "generateStableFragmentId",
  "generateSuggestionsFromDuplicates",
  "generatedOrigin",
  "getAliasById",
  "getAliasConflicts",
  "getAliasForPath",
  "getAliasesByStatus",
  "getAliasesForCanonical",
  "getAllCanonicalPaths",
  "getAllPaths",
  "getAllProvidedActions",
  "getAllProvidedPaths",
  "getAnalysisSummary",
  "getAppliedAliases",
  "getBlockingConflicts",
  "getBlockingIssues",
  "getCodebookStats",
  "getConflictForTarget",
  "getDependencyFragments",
  "getDependentFragments",
  "getDuplicatePathSuggestions",
  "getErrorIssues",
  "getErrorMessage",
  "getInitialCompilerData",
  "getInitialCompilerState",
  "getIssueSummary",
  "getLinkResultSummary",
  "getMergeSummary",
  "getNonBlockingConflicts",
  "getPathLocalName",
  "getPathNamespace",
  "getPathProvider",
  "getPendingAliases",
  "getProvidersForPath",
  "getRejectedAliases",
  "getRootFragments",
  "getVerifyBlockingIssues",
  "getVerifyResultSummary",
  "getWarningIssues",
  "groupFragmentsByKind",
  "groupFragmentsByProvides",
  "groupIssuesByCode",
  "hasActionConflict",
  "hasAliasForPath",
  "hasAllDependencies",
  "hasAllowlistViolations",
  "hasBlockingIssues",
  "hasCycles",
  "hasNoDependencies",
  "hasPathConflict",
  "hasVerifyBlockingIssues",
  "hashPrompt",
  "incrementalLink",
  "incrementalMerge",
  "internalError",
  "invalidFragmentKind",
  "invalidOperation",
  "invalidPath",
  "invalidPathIssue",
  "invalidPreconditionPathIssue",
  "isActionFragment",
  "isActionId",
  "isAsyncPath",
  "isBlockingConflict",
  "isBlockingIssue",
  "isCodeArtifact",
  "isCompilerError",
  "isDataPath",
  "isDerivedFragment",
  "isDerivedPath",
  "isDraftConvertible",
  "isEffectFragment",
  "isErr",
  "isExpressionFragment",
  "isFragmentDraft",
  "isLinkResultValid",
  "isManifestoArtifact",
  "isNLPass",
  "isNextStepAddFragment",
  "isNextStepApplyPatch",
  "isNextStepConfirmDomain",
  "isNextStepFixIssue",
  "isNextStepRecompile",
  "isNextStepResolveConflict",
  "isNextStepReviewDraft",
  "isOk",
  "isPolicyFragment",
  "isRiskAtLeast",
  "isSchemaFragment",
  "isSemanticPath",
  "isSourceFragment",
  "isStatePath",
  "isStatementFragment",
  "isTextArtifact",
  "jaccardSimilarity",
  "levenshteinDistance",
  "link",
  "linkExtended",
  "llmOrigin",
  "map",
  "mapCoreValidationIssue",
  "mapCoreValidationIssues",
  "mapErr",
  "mapValidationError",
  "mapValidationErrors",
  "mergeFragments",
  "mergeSchemaFields",
  "missingDependency",
  "missingDependencyIssue",
  "missingProvenanceIssue",
  "normalizeAllFragments",
  "normalizeFragmentProvides",
  "normalizeFragmentRequires",
  "normalizePath",
  "ok",
  "parseJSON",
  "parseJSONArray",
  "patchOrigin",
  "pathNameSimilarity",
  "pathNotFound",
  "pathTokenSimilarity",
  "previewPatch",
  "quickVerifyIsValid",
  "regenerateFragmentIdIfNeeded",
  "rejectAlias",
  "rejectAliasHandler",
  "rejectAliasOp",
  "removeAlias",
  "removeAliasHandler",
  "removeAliasOp",
  "removeFragment",
  "removeFragmentOp",
  "renamePathOp",
  "replaceExprOp",
  "resolveAllToCanonical",
  "resolveToCanonical",
  "runCompilePipeline",
  "sameNamespace",
  "schemaMismatchConflict",
  "schemaNotFound",
  "selfReference",
  "semanticMismatchConflict",
  "setConfidence",
  "sortAliasesByConfidence",
  "sortCodebookEntries",
  "sortConflicts",
  "sortFragmentsByStableId",
  "sortIssues",
  "stringSimilarity",
  "suggestAliasesForPath",
  "suggestCanonicalFor",
  "suggestConflictResolutions",
  "suggestDuplicateActionResolutions",
  "suggestDuplicatePathResolutions",
  "suggestSchemaMismatchResolutions",
  "textOrigin",
  "tokenize",
  "topologicalSort",
  "topologicalSortFragments",
  "traverseEffectAST",
  "unknownOperation",
  "updateFragmentRequires",
  "validateActions",
  "validateAllowlist",
  "validateCodebook",
  "validateDag",
  "validateDagFromFragments",
  "validateDependencyExists",
  "validateDomainDag",
  "validateDomainDraft",
  "validateEffects",
  "validateFragmentsStatic",
  "validateGraphDependencies",
  "validateMergeResult",
  "validatePaths",
  "validatePolicies",
  "validateProvenance",
  "validateStatic",
  "validateTypes",
  "verify",
  "verifyFragments",
  "verifyFull",
  "withRetry",
  "wouldAliasConflict",
]
`;
